k8s-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-pod
  labels:
    name: flask-pod
spec:
  containers:
  - name: flask-container
    image: av2ksh/flaskappindocker:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
      - containerPort: 80
