k8s-deployment-autoscaling-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-deployment
spec:
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-container
        image: av2ksh/flaskappindocker:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-port-flask-deployment
  labels:
   owner: Andrei-Rahatka
   env: prod
spec:
  selector:
    app: flask-app #pods only
  ports:
  - port: 80
    targetPort: 80  #pods port
