ingress-hosts-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: www.host1.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: Service1 #name of service 1
            port: 
              number: 80
  - host: www.host2.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: Service2 #name of service 2
            port: 
              number: 80
